# ws_genai_eb

./: .gitignore  2001.08361.md  2005.14165.md  2203.15556.md  AGENTS.md  LICENSE  README.md  _quarto.yml
examples/: ridge_basic_usage.py  (+1 more)
student-agent-pack/: .gitignore  AGENTS.md  BOOTSTRAP.md  INSIGHTS.md  README 2.md  README.md  STARTUP.md  USER.md  install.ps1  install.sh  live_llm.py  opencode.json  pyproject.toml
student-agent-pack/.githooks/: pre-push
student-agent-pack/config/: form_config.example.json  form_config.json  openrouter_free_models.json
student-agent-pack/context/: code_mode_prompt.md  course_context.md  exercise_catalog.md  exercise_coaching_rules.md  jan_exercise_prompts.yaml  subtask_tips.md  supervisor_mode_prompt.md  teacher_mode_prompt.md
student-agent-pack/exercises/: E1.md  E12.md  E2.md  E5.md  E6.md  E7.md  E8.md  EXERCISE_TEMPLATE.md  README.md
student-agent-pack/exercises/01/: E01.md  README.md  hello_world.py
student-agent-pack/submissions/: .gitignore
student-agent-pack/tests/: test_exercises_01_06.py
student-agent-pack/tools/: ask_course.py  check_submission.py  exercise_path.py  full_reset_student_pack.py  index_course_materials.py  init_exercises.py  list_todo_student.py  preflight_check.py  print_exercise_packet.py  progress_dashboard.py  recommend_next_exercise.py  startup_check.py  strip_exercise_scripts.py  strip_startup_complete.py  strip_student_identity.py  submit_exercise.py
student-agent-pack/work/: E1.md  E10.md  E11.md  E2.md  E3.md  E4.md  E5.md  E6.md  E7.md  E8.md  E9.md  EXERCISE_TEMPLATE.md  README.md
(+299 files in other folders)
