[project]
name = "ti-student-agent-pack"
version = "0.1.0"
description = "Tinbergen Institute student coding environment"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]

[tool.uv]
package = false
