[project]
name = "ti-student-agent-pack"
version = "0.1.0"
description = "Tinbergen Institute student coding environment"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=1.1.12",
    "langchain-openrouter>=0.2.0",
    "openrouter==0.7.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]

[tool.uv]
package = false
